tests/models/struct/unnamed/unit/fail/ge.rs
use dade::model;
#[model]
struct TestModel (
   #[field(ge = 2)]
    ()
);
fn main() {}
